--- a/CorrelationCheck.ipynb
+++ b/CorrelationCheck.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 149,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 150,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 156,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -78,8 +78,11 @@
        "      <th>Lag 2 Change SPY</th>\n",
        "      <th>Lag 2 Significant SPY</th>\n",
        "      <th>BarackObama_sentiment_score</th>\n",
+       "      <th>BarackObama_heuristic_score</th>\n",
        "      <th>cnnbrk_sentiment_score</th>\n",
+       "      <th>cnnbrk_heuristic_score</th>\n",
        "      <th>KimKardashian_sentiment_score</th>\n",
+       "      <th>KimKardashian_heuristic_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -92,8 +95,11 @@
        "      <td>0.012864</td>\n",
        "      <td>-0.013647</td>\n",
        "      <td>0.021521</td>\n",
+       "      <td>0.029132</td>\n",
        "      <td>0.043728</td>\n",
+       "      <td>0.038093</td>\n",
        "      <td>0.047395</td>\n",
+       "      <td>0.037807</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Lag 2 Change VIX</td>\n",
@@ -104,8 +110,11 @@
        "      <td>-0.812895</td>\n",
        "      <td>-0.695892</td>\n",
        "      <td>-0.018619</td>\n",
+       "      <td>-0.024138</td>\n",
        "      <td>0.169578</td>\n",
+       "      <td>0.161313</td>\n",
        "      <td>-0.080551</td>\n",
+       "      <td>-0.091466</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Lag 2 Significant VIX</td>\n",
@@ -116,8 +125,11 @@
        "      <td>-0.604858</td>\n",
        "      <td>-0.526078</td>\n",
        "      <td>0.043486</td>\n",
+       "      <td>0.041407</td>\n",
        "      <td>0.175315</td>\n",
+       "      <td>0.180703</td>\n",
        "      <td>-0.050814</td>\n",
+       "      <td>-0.066612</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Change SPY</td>\n",
@@ -128,8 +140,11 @@
        "      <td>-0.097094</td>\n",
        "      <td>-0.064839</td>\n",
        "      <td>-0.045561</td>\n",
+       "      <td>-0.047821</td>\n",
        "      <td>0.083666</td>\n",
+       "      <td>0.096154</td>\n",
        "      <td>-0.045535</td>\n",
+       "      <td>-0.035323</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Lag 2 Change SPY</td>\n",
@@ -140,8 +155,11 @@
        "      <td>1.000000</td>\n",
        "      <td>0.822793</td>\n",
        "      <td>0.012597</td>\n",
+       "      <td>0.015496</td>\n",
        "      <td>-0.156854</td>\n",
+       "      <td>-0.142991</td>\n",
        "      <td>0.019596</td>\n",
+       "      <td>0.030105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Lag 2 Significant SPY</td>\n",
@@ -152,8 +170,11 @@
        "      <td>0.822793</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.073112</td>\n",
+       "      <td>0.070065</td>\n",
        "      <td>-0.151014</td>\n",
+       "      <td>-0.134161</td>\n",
        "      <td>-0.008958</td>\n",
+       "      <td>-0.003135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>BarackObama_sentiment_score</td>\n",
@@ -164,8 +185,26 @@
        "      <td>0.012597</td>\n",
        "      <td>0.073112</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>0.995785</td>\n",
        "      <td>-0.006240</td>\n",
+       "      <td>0.014262</td>\n",
        "      <td>0.069529</td>\n",
+       "      <td>0.069534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>BarackObama_heuristic_score</td>\n",
+       "      <td>0.029132</td>\n",
+       "      <td>-0.024138</td>\n",
+       "      <td>0.041407</td>\n",
+       "      <td>-0.047821</td>\n",
+       "      <td>0.015496</td>\n",
+       "      <td>0.070065</td>\n",
+       "      <td>0.995785</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.019025</td>\n",
+       "      <td>0.000987</td>\n",
+       "      <td>0.080592</td>\n",
+       "      <td>0.081671</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>cnnbrk_sentiment_score</td>\n",
@@ -176,8 +215,26 @@
        "      <td>-0.156854</td>\n",
        "      <td>-0.151014</td>\n",
        "      <td>-0.006240</td>\n",
+       "      <td>-0.019025</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>0.994058</td>\n",
        "      <td>0.198882</td>\n",
+       "      <td>0.196652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>cnnbrk_heuristic_score</td>\n",
+       "      <td>0.038093</td>\n",
+       "      <td>0.161313</td>\n",
+       "      <td>0.180703</td>\n",
+       "      <td>0.096154</td>\n",
+       "      <td>-0.142991</td>\n",
+       "      <td>-0.134161</td>\n",
+       "      <td>0.014262</td>\n",
+       "      <td>0.000987</td>\n",
+       "      <td>0.994058</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.227692</td>\n",
+       "      <td>0.225898</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>KimKardashian_sentiment_score</td>\n",
@@ -188,7 +245,25 @@
        "      <td>0.019596</td>\n",
        "      <td>-0.008958</td>\n",
        "      <td>0.069529</td>\n",
+       "      <td>0.080592</td>\n",
        "      <td>0.198882</td>\n",
+       "      <td>0.227692</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.988960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>KimKardashian_heuristic_score</td>\n",
+       "      <td>0.037807</td>\n",
+       "      <td>-0.091466</td>\n",
+       "      <td>-0.066612</td>\n",
+       "      <td>-0.035323</td>\n",
+       "      <td>0.030105</td>\n",
+       "      <td>-0.003135</td>\n",
+       "      <td>0.069534</td>\n",
+       "      <td>0.081671</td>\n",
+       "      <td>0.196652</td>\n",
+       "      <td>0.225898</td>\n",
+       "      <td>0.988960</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -204,8 +279,11 @@
        "Lag 2 Change SPY                 0.012864         -0.812895   \n",
        "Lag 2 Significant SPY           -0.013647         -0.695892   \n",
        "BarackObama_sentiment_score      0.021521         -0.018619   \n",
+       "BarackObama_heuristic_score      0.029132         -0.024138   \n",
        "cnnbrk_sentiment_score           0.043728          0.169578   \n",
+       "cnnbrk_heuristic_score           0.038093          0.161313   \n",
        "KimKardashian_sentiment_score    0.047395         -0.080551   \n",
+       "KimKardashian_heuristic_score    0.037807         -0.091466   \n",
        "\n",
        "                               Lag 2 Significant VIX  Change SPY  \\\n",
        "Change VIX                                 -0.096219   -0.758898   \n",
@@ -215,8 +293,11 @@
        "Lag 2 Change SPY                           -0.604858   -0.097094   \n",
        "Lag 2 Significant SPY                      -0.526078   -0.064839   \n",
        "BarackObama_sentiment_score                 0.043486   -0.045561   \n",
+       "BarackObama_heuristic_score                 0.041407   -0.047821   \n",
        "cnnbrk_sentiment_score                      0.175315    0.083666   \n",
+       "cnnbrk_heuristic_score                      0.180703    0.096154   \n",
        "KimKardashian_sentiment_score              -0.050814   -0.045535   \n",
+       "KimKardashian_heuristic_score              -0.066612   -0.035323   \n",
        "\n",
        "                               Lag 2 Change SPY  Lag 2 Significant SPY  \\\n",
        "Change VIX                             0.012864              -0.013647   \n",
@@ -226,8 +307,11 @@
        "Lag 2 Change SPY                       1.000000               0.822793   \n",
        "Lag 2 Significant SPY                  0.822793               1.000000   \n",
        "BarackObama_sentiment_score            0.012597               0.073112   \n",
+       "BarackObama_heuristic_score            0.015496               0.070065   \n",
        "cnnbrk_sentiment_score                -0.156854              -0.151014   \n",
+       "cnnbrk_heuristic_score                -0.142991              -0.134161   \n",
        "KimKardashian_sentiment_score          0.019596              -0.008958   \n",
+       "KimKardashian_heuristic_score          0.030105              -0.003135   \n",
        "\n",
        "                               BarackObama_sentiment_score  \\\n",
        "Change VIX                                        0.021521   \n",
@@ -237,33 +321,70 @@
        "Lag 2 Change SPY                                  0.012597   \n",
        "Lag 2 Significant SPY                             0.073112   \n",
        "BarackObama_sentiment_score                       1.000000   \n",
+       "BarackObama_heuristic_score                       0.995785   \n",
        "cnnbrk_sentiment_score                           -0.006240   \n",
+       "cnnbrk_heuristic_score                            0.014262   \n",
        "KimKardashian_sentiment_score                     0.069529   \n",
+       "KimKardashian_heuristic_score                     0.069534   \n",
        "\n",
-       "                               cnnbrk_sentiment_score  \\\n",
-       "Change VIX                                   0.043728   \n",
-       "Lag 2 Change VIX                             0.169578   \n",
-       "Lag 2 Significant VIX                        0.175315   \n",
-       "Change SPY                                   0.083666   \n",
-       "Lag 2 Change SPY                            -0.156854   \n",
-       "Lag 2 Significant SPY                       -0.151014   \n",
-       "BarackObama_sentiment_score                 -0.006240   \n",
-       "cnnbrk_sentiment_score                       1.000000   \n",
-       "KimKardashian_sentiment_score                0.198882   \n",
+       "                               BarackObama_heuristic_score  \\\n",
+       "Change VIX                                        0.029132   \n",
+       "Lag 2 Change VIX                                 -0.024138   \n",
+       "Lag 2 Significant VIX                             0.041407   \n",
+       "Change SPY                                       -0.047821   \n",
+       "Lag 2 Change SPY                                  0.015496   \n",
+       "Lag 2 Significant SPY                             0.070065   \n",
+       "BarackObama_sentiment_score                       0.995785   \n",
+       "BarackObama_heuristic_score                       1.000000   \n",
+       "cnnbrk_sentiment_score                           -0.019025   \n",
+       "cnnbrk_heuristic_score                            0.000987   \n",
+       "KimKardashian_sentiment_score                     0.080592   \n",
+       "KimKardashian_heuristic_score                     0.081671   \n",
        "\n",
-       "                               KimKardashian_sentiment_score  \n",
-       "Change VIX                                          0.047395  \n",
-       "Lag 2 Change VIX                                   -0.080551  \n",
-       "Lag 2 Significant VIX                              -0.050814  \n",
-       "Change SPY                                         -0.045535  \n",
-       "Lag 2 Change SPY                                    0.019596  \n",
-       "Lag 2 Significant SPY                              -0.008958  \n",
-       "BarackObama_sentiment_score                         0.069529  \n",
-       "cnnbrk_sentiment_score                              0.198882  \n",
-       "KimKardashian_sentiment_score                       1.000000  "
+       "                               cnnbrk_sentiment_score  cnnbrk_heuristic_score  \\\n",
+       "Change VIX                                   0.043728                0.038093   \n",
+       "Lag 2 Change VIX                             0.169578                0.161313   \n",
+       "Lag 2 Significant VIX                        0.175315                0.180703   \n",
+       "Change SPY                                   0.083666                0.096154   \n",
+       "Lag 2 Change SPY                            -0.156854               -0.142991   \n",
+       "Lag 2 Significant SPY                       -0.151014               -0.134161   \n",
+       "BarackObama_sentiment_score                 -0.006240                0.014262   \n",
+       "BarackObama_heuristic_score                 -0.019025                0.000987   \n",
+       "cnnbrk_sentiment_score                       1.000000                0.994058   \n",
+       "cnnbrk_heuristic_score                       0.994058                1.000000   \n",
+       "KimKardashian_sentiment_score                0.198882                0.227692   \n",
+       "KimKardashian_heuristic_score                0.196652                0.225898   \n",
+       "\n",
+       "                               KimKardashian_sentiment_score  \\\n",
+       "Change VIX                                          0.047395   \n",
+       "Lag 2 Change VIX                                   -0.080551   \n",
+       "Lag 2 Significant VIX                              -0.050814   \n",
+       "Change SPY                                         -0.045535   \n",
+       "Lag 2 Change SPY                                    0.019596   \n",
+       "Lag 2 Significant SPY                              -0.008958   \n",
+       "BarackObama_sentiment_score                         0.069529   \n",
+       "BarackObama_heuristic_score                         0.080592   \n",
+       "cnnbrk_sentiment_score                              0.198882   \n",
+       "cnnbrk_heuristic_score                              0.227692   \n",
+       "KimKardashian_sentiment_score                       1.000000   \n",
+       "KimKardashian_heuristic_score                       0.988960   \n",
+       "\n",
+       "                               KimKardashian_heuristic_score  \n",
+       "Change VIX                                          0.037807  \n",
+       "Lag 2 Change VIX                                   -0.091466  \n",
+       "Lag 2 Significant VIX                              -0.066612  \n",
+       "Change SPY                                         -0.035323  \n",
+       "Lag 2 Change SPY                                    0.030105  \n",
+       "Lag 2 Significant SPY                              -0.003135  \n",
+       "BarackObama_sentiment_score                         0.069534  \n",
+       "BarackObama_heuristic_score                         0.081671  \n",
+       "cnnbrk_sentiment_score                              0.196652  \n",
+       "cnnbrk_heuristic_score                              0.225898  \n",
+       "KimKardashian_sentiment_score                       0.988960  \n",
+       "KimKardashian_heuristic_score                       1.000000  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +611,7 @@
        "Washington Post_sentiment_score                         1.000000  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
