--- a/Feature Builder.ipynb
+++ b/Feature Builder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -28,32 +28,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "influencers = ['BarackObama','cnnbrk', 'KimKardashian']\n",
-    "sources = ['New York Times', 'CNN', 'Washington Post']\n",
+    "influencers = ['BarackObama_sentiment','cnnbrk_sentiment', 'KimKardashian_sentiment']\n",
+    "sources = ['New York Times_sentiment', 'CNN_sentiment', 'Washington Post_sentiment']\n",
     "stocks = ['VIX_Predict', 'SPY_Predict']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "twitter_important_columns = ['Date','sentiment_score']\n",
+    "twitter_important_columns = ['Date','sentiment_score','heuristic_score']\n",
     "stock_important_columns = ['Date','Change','Lag 2 Change', 'Lag 2 Significant']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -73,19 +73,19 @@
    "source": [
     "dfs_twitter = []\n",
     "for influencer in influencers:\n",
+    "    influencer_name = influencer.split('_')[0]\n",
     "    df = pd.read_csv(twitter_dir+influencer+'.csv', parse_dates=['Date'])\n",
-    "    df['Date']= pd.to_datetime(df['Date'].dt.normalize())\n",
     "    df = df[df['Date']<last_date]\n",
     "    df = df[df['Date']>first_date]\n",
     "    df = df[twitter_important_columns]\n",
-    "    df = df.groupby('Date').sum()\n",
-    "    df = df.rename(columns={'sentiment_score':influencer+'_sentiment_score'})\n",
+    "    df = df.rename(columns={'sentiment_score':influencer_name+'_sentiment_score'})\n",
+    "    df = df.rename(columns={'heuristic_score':influencer_name+'_heuristic_score'})\n",
     "    dfs_twitter.append(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
@@ -93,18 +93,17 @@
    "source": [
     "dfs_news = []\n",
     "for source in sources:\n",
+    "    source_name = source.split('_')[0]\n",
     "    df = pd.read_csv(news_dir+source+'.csv', parse_dates=['Date'])\n",
-    "    df['Date']= pd.to_datetime(df['Date'].dt.normalize())\n",
     "    df = df[df['Date']<last_date]\n",
     "    df = df[df['Date']>first_date]\n",
-    "    df = df.groupby('Date').sum()\n",
-    "    df = df.rename(columns={'sentiment_score':source+'_sentiment_score'})\n",
+    "    df = df.rename(columns={'sentiment_score':source_name+'_sentiment_score'})\n",
     "    dfs_news.append(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 91,
    "metadata": {
     "collapsed": true
    },
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 93,
    "metadata": {
     "collapsed": true
    },
@@ -196,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
