--- a/Sentiment Maker.ipynb
+++ b/Sentiment Maker.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -58,18 +59,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#TODO ADD CUSTOM HEURISTICS"
+    "#TODO ADD CUSTOM HEURISTICS\n",
+    "def heuristic_1(df):\n",
+    "    senti = sum(df['sentiment_score']*df['number_of_likes'].apply(np.log))\n",
+    "    return senti\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 106,
    "metadata": {
     "collapsed": true
    },
@@ -78,14 +83,19 @@
     "def sentimentTwiiter(influencers):\n",
     "    for influencer in influencers:\n",
     "        df = pd.read_csv(twitter_dir+influencer+'.csv', parse_dates=['Date'])\n",
+    "        df['Date'] = pd.to_datetime(df['Date'].dt.normalize())\n",
     "        df['sentiment_score'] = df['content'].apply(sentiment_analyzer_scores)\n",
-    "        df.to_csv(twitter_dir+influencer+'.csv', index=False)\n",
+    "        df2 = df.groupby('Date').sum()\n",
+    "        df2['heuristic_score'] = df.groupby('Date').apply(heuristic_1)\n",
+    "        df2 = df2.reset_index()\n",
+    "        df2 = df2[['Date','sentiment_score', 'heuristic_score']]\n",
+    "        df2.to_csv(twitter_dir+influencer+'_sentiment.csv', index=False)\n",
     "    print('done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -94,14 +104,18 @@
     "def sentimentNews(sources):\n",
     "    for source in sources:\n",
     "        df = pd.read_csv(news_dir+source+'.csv', parse_dates=['Date'])\n",
+    "        df['Date'] = pd.to_datetime(df['Date'].dt.normalize())\n",
     "        df['sentiment_score'] = df['title'].apply(sentiment_analyzer_scores)\n",
-    "        df.to_csv(news_dir+source+'.csv', index=False)\n",
+    "        df2 = df.groupby('Date').sum()\n",
+    "        df2 = df2.reset_index()\n",
+    "        df2 = df2[['Date','sentiment_score']]\n",
+    "        df2.to_csv(news_dir+source+'_sentiment.csv', index=False)\n",
     "    print('done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -122,18 +136,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 79,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = pd.read_csv('BarackObama.csv', parse_dates=['Date'])\n"
+    "df = pd.read_csv(twitter_dir+'BarackObama.csv', parse_dates=['Date'])\n",
+    "df['Date'] = pd.to_datetime(df['Date'].dt.normalize())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df.groupby('Date').sum()\n",
+    "df2['heuristic_score'] = df.groupby('Date').apply(heuristic_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['number_of_likes', 'number_of_shares', 'sentiment_score',\n",
+       "       'heuristic_score'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df2.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -158,167 +212,167 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Date</th>\n",
-       "      <th>author</th>\n",
-       "      <th>content</th>\n",
-       "      <th>number_of_likes</th>\n",
-       "      <th>number_of_shares</th>\n",
+       "      <th>sentiment_score</th>\n",
+       "      <th>heuristic_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>2014-01-08 14:57:00</td>\n",
-       "      <td>BarackObama</td>\n",
-       "      <td>Make #53 special for #44: http://t.co/leGTnedv...</td>\n",
-       "      <td>1512</td>\n",
-       "      <td>726</td>\n",
+       "      <td>2014-01-08</td>\n",
+       "      <td>2.1428</td>\n",
+       "      <td>14.570481</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>2014-01-08 17:58:00</td>\n",
-       "      <td>BarackObama</td>\n",
-       "      <td>Job growth has exceeded 200,000 for the sixth ...</td>\n",
-       "      <td>816</td>\n",
-       "      <td>556</td>\n",
+       "      <td>2014-01-09</td>\n",
+       "      <td>0.5106</td>\n",
+       "      <td>4.453833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>2014-01-08 18:46:00</td>\n",
-       "      <td>BarackObama</td>\n",
-       "      <td>Happening now: President Obama delivers a stat...</td>\n",
-       "      <td>491</td>\n",
-       "      <td>288</td>\n",
+       "      <td>2014-01-10</td>\n",
+       "      <td>0.4404</td>\n",
+       "      <td>3.208839</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>2014-01-08 18:54:00</td>\n",
-       "      <td>BarackObama</td>\n",
-       "      <td>\"That's the longest streak of private sector j...</td>\n",
-       "      <td>804</td>\n",
-       "      <td>619</td>\n",
+       "      <td>2014-01-11</td>\n",
+       "      <td>0.7096</td>\n",
+       "      <td>5.263515</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>2014-01-08 18:57:00</td>\n",
-       "      <td>BarackObama</td>\n",
-       "      <td>\"The fact is we could be much further along .....</td>\n",
-       "      <td>1505</td>\n",
-       "      <td>1260</td>\n",
+       "      <td>2014-01-12</td>\n",
+       "      <td>-0.0949</td>\n",
+       "      <td>-0.853277</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2858</td>\n",
-       "      <td>2016-12-10 16:35:00</td>\n",
-       "      <td>BarackObama</td>\n",
-       "      <td>Let's leave our children and grandchildren a p...</td>\n",
-       "      <td>12072</td>\n",
-       "      <td>3692</td>\n",
+       "      <td>691</td>\n",
+       "      <td>2016-12-07</td>\n",
+       "      <td>-0.7224</td>\n",
+       "      <td>-5.853238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2859</td>\n",
-       "      <td>2016-12-10 17:57:00</td>\n",
-       "      <td>BarackObama</td>\n",
-       "      <td>Last week, more than 190 countries reached a l...</td>\n",
-       "      <td>3283</td>\n",
-       "      <td>855</td>\n",
+       "      <td>692</td>\n",
+       "      <td>2016-12-08</td>\n",
+       "      <td>1.5873</td>\n",
+       "      <td>14.700298</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2860</td>\n",
-       "      <td>2016-12-10 19:43:00</td>\n",
-       "      <td>BarackObama</td>\n",
-       "      <td>Support the bold steps we're taking against cl...</td>\n",
-       "      <td>1979</td>\n",
-       "      <td>496</td>\n",
+       "      <td>693</td>\n",
+       "      <td>2016-12-09</td>\n",
+       "      <td>-0.3821</td>\n",
+       "      <td>-3.302238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2861</td>\n",
-       "      <td>2016-12-10 21:02:00</td>\n",
-       "      <td>BarackObama</td>\n",
-       "      <td>LIVE: President Obama is speaking at a recepti...</td>\n",
-       "      <td>1931</td>\n",
-       "      <td>468</td>\n",
+       "      <td>694</td>\n",
+       "      <td>2016-12-10</td>\n",
+       "      <td>0.6381</td>\n",
+       "      <td>4.420319</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2862</td>\n",
-       "      <td>2017-10-01 23:44:00</td>\n",
-       "      <td>BarackObama</td>\n",
-       "      <td>Tonight, President Obama reflects on eight yea...</td>\n",
-       "      <td>38884</td>\n",
-       "      <td>9568</td>\n",
+       "      <td>695</td>\n",
+       "      <td>2017-10-01</td>\n",
+       "      <td>0.4215</td>\n",
+       "      <td>4.454555</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2863 rows × 5 columns</p>\n",
+       "<p>696 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    Date       author  \\\n",
-       "0    2014-01-08 14:57:00  BarackObama   \n",
-       "1    2014-01-08 17:58:00  BarackObama   \n",
-       "2    2014-01-08 18:46:00  BarackObama   \n",
-       "3    2014-01-08 18:54:00  BarackObama   \n",
-       "4    2014-01-08 18:57:00  BarackObama   \n",
-       "...                  ...          ...   \n",
-       "2858 2016-12-10 16:35:00  BarackObama   \n",
-       "2859 2016-12-10 17:57:00  BarackObama   \n",
-       "2860 2016-12-10 19:43:00  BarackObama   \n",
-       "2861 2016-12-10 21:02:00  BarackObama   \n",
-       "2862 2017-10-01 23:44:00  BarackObama   \n",
+       "          Date  sentiment_score  heuristic_score\n",
+       "0   2014-01-08           2.1428        14.570481\n",
+       "1   2014-01-09           0.5106         4.453833\n",
+       "2   2014-01-10           0.4404         3.208839\n",
+       "3   2014-01-11           0.7096         5.263515\n",
+       "4   2014-01-12          -0.0949        -0.853277\n",
+       "..         ...              ...              ...\n",
+       "691 2016-12-07          -0.7224        -5.853238\n",
+       "692 2016-12-08           1.5873        14.700298\n",
+       "693 2016-12-09          -0.3821        -3.302238\n",
+       "694 2016-12-10           0.6381         4.420319\n",
+       "695 2017-10-01           0.4215         4.454555\n",
        "\n",
-       "                                                content  number_of_likes  \\\n",
-       "0     Make #53 special for #44: http://t.co/leGTnedv...             1512   \n",
-       "1     Job growth has exceeded 200,000 for the sixth ...              816   \n",
-       "2     Happening now: President Obama delivers a stat...              491   \n",
-       "3     \"That's the longest streak of private sector j...              804   \n",
-       "4     \"The fact is we could be much further along .....             1505   \n",
-       "...                                                 ...              ...   \n",
-       "2858  Let's leave our children and grandchildren a p...            12072   \n",
-       "2859  Last week, more than 190 countries reached a l...             3283   \n",
-       "2860  Support the bold steps we're taking against cl...             1979   \n",
-       "2861  LIVE: President Obama is speaking at a recepti...             1931   \n",
-       "2862  Tonight, President Obama reflects on eight yea...            38884   \n",
-       "\n",
-       "      number_of_shares  \n",
-       "0                  726  \n",
-       "1                  556  \n",
-       "2                  288  \n",
-       "3                  619  \n",
-       "4                 1260  \n",
-       "...                ...  \n",
-       "2858              3692  \n",
-       "2859               855  \n",
-       "2860               496  \n",
-       "2861               468  \n",
-       "2862              9568  \n",
-       "\n",
-       "[2863 rows x 5 columns]"
+       "[696 rows x 3 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2"
+    "df2[['Date','sentiment_score', 'heuristic_score']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x11aa1a160>"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.groupby('Date').aapl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('New York Times.csv', parse_dates=['Date'])"
+    "df3 = df2.groupby('Date').apply(heuristic_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date\n",
+       "2014-01-08    14.570481\n",
+       "2014-01-09     4.453833\n",
+       "2014-01-10     3.208839\n",
+       "2014-01-11     5.263515\n",
+       "2014-01-12    -0.853277\n",
+       "                ...    \n",
+       "2016-12-07    -5.853238\n",
+       "2016-12-08    14.700298\n",
+       "2016-12-09    -3.302238\n",
+       "2016-12-10     4.420319\n",
+       "2017-10-01     4.454555\n",
+       "Length: 696, dtype: float64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3"
    ]
   },
   {
